Add some changes to products description

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -19,15 +19,13 @@ The Altoros Elasticsearch for PCF tile is currently in beta and is intended for 
 Do not use this product in a PCF production environment.
 </p>
 
-This is documentation for Altoros Elasticsearch for PCF service tile.
+This is documentation for the Altoros Elasticsearch for PCF service tile.
 
 ## <a id='overview'></a>Overview
 
-**The overview describes the service that your product offers to PCF developers. See below for an example.**
-
 Elasticsearch is a real-time distributed RESTful search and analytics engine built for the cloud. It allows users to explore their data in a very rapid and highly scalable mode.
  I
-Altoros Elasticsearch for PCF is a fully-managed service for Pivotal Cloud Foundry. The tile deploys an Elasticsearch cluster, which could be shared between multiple users. That approach ensures lean and effective utulization of resource$
+Altoros Elasticsearch for PCF is a fully-managed service for Pivotal Cloud Foundry. The tile deploys an Elasticsearch cluster, that can be shared among multiple users. This approach ensures lean and effective utulization of resource$
 
 * A distributed real-time document store where every field is indexed and searchable
 
@@ -37,9 +35,9 @@ Altoros Elasticsearch for PCF is a fully-managed service for Pivotal Cloud Found
 
 Altoros Elasticsearch for PCF includes the following key features:
 
-* Possibility to use Elasticsearch service in a multitenant mode
-* Storing data in a distributed Elasticsearch cluster
-* Fully-automated deployment and provisioning of Elasticearch installation
+* The possibility to use the Elasticsearch service in a multitenant mode
+* Data storage in a distributed Elasticsearch cluster
+* Fully-automated deployment and provisioning of an Elasticsearch installation
 
 ## <a id="snapshot"></a>Product Snapshot
 
@@ -85,10 +83,6 @@ Altoros Elasticsearch for PCF has the following requirements:
 + [Elastic Runtime](https://network.pivotal.io/products/elastic-runtime) v1.9.x, 1.10.x
 
 + [Ops Manager](https://network.pivotal.io/products/ops-manager) v.1.9.x, 1.10.x
-
-## <a id="limitations"></a>Limitations
-
-**List any known limitations.**
 
 ## <a id="feedback"></a>Feedback
 
