--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -24,6 +24,6 @@ This adds the tile to your staging area.
 
 1. Click **Save**.
 
-1. Return to the Ops Manager Installation Dashboard and click **Apply Changes** to install Altoros Elasticsearch for PCF tile.
+1. Return to the Ops Manager Installation Dashboard and click **Apply Changes** to install the Altoros Elasticsearch for PCF tile.
 
 
