--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -12,5 +12,5 @@ Features included in this release:
 
 * Elasticsearch v5.2.2 
 * Automated service deployment and provisioning
-* Possibility to use the service in a multitenant mode
+* The possibility to use the service in a multitenant mode
 
